JumpScript/tests/baselines/reference/enumGenericTypeClash.errors.txt
tests/cases/compiler/enumGenericTypeClash.jump(1,7): error TS2300: Duplicate identifier 'X'.
tests/cases/compiler/enumGenericTypeClash.jump(2,6): error TS2300: Duplicate identifier 'X'.


==== tests/cases/compiler/enumGenericTypeClash.jump (2 errors) ====
    class X<A,B,C> { }
          ~
!!! error TS2300: Duplicate identifier 'X'.
    enum X { MyVal }
         ~
!!! error TS2300: Duplicate identifier 'X'.
    